--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
-  background-color: #ADD8E6;
+  background-color: #C4A484;
   color : black;
 }
 
 .navbar-default {
-  background-color: #CCCCFF;
+  background-color: #addda7;
+  
 }
 
 
